ingress-monitoring.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - monitoring.sequ.re
    secretName: monitoring-tls
  rules:
    - host: monitoring.sequ.re
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: monitoring-kb-http
                port:
                  number: 5601
