ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    #cert-manager.io/cluster-issuer: "selfsigned"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - kibana.sequ.re
    secretName: kibana-tls
  rules:
    - host: kibana.sequ.re
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kibana-kb-http
                port:
                  number: 5601
